--- a/index.html
+++ b/index.html
@@ -31,10 +31,95 @@
     <!-- end nav bar -->
     <header class="hero">
       <div class="banner">
-        <h1 class="banner-title">Furniture collection</h1>
-        <button class="banner-btn">shop now</button>
+        <h1 class="banner-title">Fully Furnished Spaces</h1>
+        <button class="banner-btn">book a space</button>
       </div>
     </header>
+    <!-- end of hero -->
+    <!-- product -->
+    <section class="products">
+      <div class="section-title">
+        <h2>available spaces</h2>
+      </div>
+      <div class="products-center">
+        <!-- single product -->
+        <article class="product">
+          <div class="img-container">
+            <img
+              src="./images/product-1.jpeg"
+              alt="product"
+              class="product-img"
+            />
+            <button class="bag-btn" data-id="1">
+              <i class="fas fa-shopping-cart">add to bag</i>
+            </button>
+          </div>
+          <h3>with queen bed</h3>
+          <h4>$15 a day</h4>
+        </article>
+        <!-- single product -->
+        <article class="product">
+          <div class="img-container">
+            <img
+              src="./images/product-1.jpeg"
+              alt="product"
+              class="product-img"
+            />
+            <button class="bag-btn" data-id="1">
+              <i class="fas fa-shopping-cart">add to bag</i>
+            </button>
+          </div>
+          <h3>with queen bed</h3>
+          <h4>$15 a day</h4>
+        </article>
+        <!-- single product -->
+        <article class="product">
+          <div class="img-container">
+            <img
+              src="./images/product-1.jpeg"
+              alt="product"
+              class="product-img"
+            />
+            <button class="bag-btn" data-id="1">
+              <i class="fas fa-shopping-cart">add to bag</i>
+            </button>
+          </div>
+          <h3>with queen bed</h3>
+          <h4>$15 a day</h4>
+        </article>
+        <!-- single product -->
+        <article class="product">
+          <div class="img-container">
+            <img
+              src="./images/product-1.jpeg"
+              alt="product"
+              class="product-img"
+            />
+            <button class="bag-btn" data-id="1">
+              <i class="fas fa-shopping-cart">add to bag</i>
+            </button>
+          </div>
+          <h3>with queen bed</h3>
+          <h4>$15 a day</h4>
+        </article>
+        <!-- single product -->
+        <article class="product">
+          <div class="img-container">
+            <img
+              src="./images/product-1.jpeg"
+              alt="product"
+              class="product-img"
+            />
+            <button class="bag-btn" data-id="1">
+              <i class="fas fa-shopping-cart">add to bag</i>
+            </button>
+          </div>
+          <h3>with queen bed</h3>
+          <h4>$15 a day</h4>
+        </article>
+      </div>
+    </section>
+    <!-- end product -->
 
     <script src="./app.js"></script>
   </body>
