--- a/index.html
+++ b/index.html
@@ -57,69 +57,42 @@
           <h3>with queen bed</h3>
           <h4>$15 a day</h4>
         </article>
-        <!-- single product -->
-        <article class="product">
-          <div class="img-container">
-            <img
-              src="./images/product-1.jpeg"
-              alt="product"
-              class="product-img"
-            />
-            <button class="bag-btn" data-id="1">
-              <i class="fas fa-shopping-cart">add to bag</i>
-            </button>
-          </div>
-          <h3>with queen bed</h3>
-          <h4>$15 a day</h4>
-        </article>
-        <!-- single product -->
-        <article class="product">
-          <div class="img-container">
-            <img
-              src="./images/product-1.jpeg"
-              alt="product"
-              class="product-img"
-            />
-            <button class="bag-btn" data-id="1">
-              <i class="fas fa-shopping-cart">add to bag</i>
-            </button>
-          </div>
-          <h3>with queen bed</h3>
-          <h4>$15 a day</h4>
-        </article>
-        <!-- single product -->
-        <article class="product">
-          <div class="img-container">
-            <img
-              src="./images/product-1.jpeg"
-              alt="product"
-              class="product-img"
-            />
-            <button class="bag-btn" data-id="1">
-              <i class="fas fa-shopping-cart">add to bag</i>
-            </button>
-          </div>
-          <h3>with queen bed</h3>
-          <h4>$15 a day</h4>
-        </article>
-        <!-- single product -->
-        <article class="product">
-          <div class="img-container">
-            <img
-              src="./images/product-1.jpeg"
-              alt="product"
-              class="product-img"
-            />
-            <button class="bag-btn" data-id="1">
-              <i class="fas fa-shopping-cart">add to bag</i>
-            </button>
-          </div>
-          <h3>with queen bed</h3>
-          <h4>$15 a day</h4>
-        </article>
       </div>
     </section>
     <!-- end product -->
+    <!-- cart -->
+    <div class="cart-overlay">
+      <div class="cart">
+        <span class="close-cart">
+          <i class="fas fa-window-close"></i>
+        </span>
+        <h2>your cart</h2>
+        <div class="cart-content">
+          <!-- cart item -->
+          <div class="cart-item">
+            <img src="./images/product-1.jpeg" alt="product" />
+            <div>
+              <h4>queen bed</h4>
+              <h5>$10</h5>
+              <span class="remove-item">remove</span>
+            </div>
+            <div class="days">
+              <h5>#days</h5>
+              <i class="fas fa-chevron-up"></i>
+              <p class="item-amount">1</p>
+              <i class="fas fa-chevron-down"></i>
+            </div>
+          </div>
+
+          <!-- end cart item -->
+        </div>
+        <div class="cart-footer">
+          <h3>your total : $ <span class="cart-total">0</span></h3>
+          <button class="clear-cart banner-btn">clear cart</button>
+        </div>
+      </div>
+    </div>
+    <!--end cart -->
 
     <script src="./app.js"></script>
   </body>
