--- a/index.html
+++ b/index.html
@@ -63,7 +63,8 @@
       </div>
     </div>
     <!--end cart -->
-
+    <!-- contentful -->
+    <script src="https://cdn.jsdelivr.net/npm/contentful@latest/dist/contentful.browser.min.js"></script>
     <script src="./app.js"></script>
   </body>
 </html>
