--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
       </div>
     </div>
     <!--end cart -->
-    <div class="footer">&copy; built by Richard Rosario</div>
+    <div class="footer">&copy; <small>built by Richard Rosario. <a href="https://rosario.solutions">rosario.solutions</a></small></div>
     <!-- contentful -->
     <script src="https://cdn.jsdelivr.net/npm/contentful@latest/dist/contentful.browser.min.js"></script>
     <script src="./app.js"></script>
